<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BodyFitness_Fragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bAbsWorkout"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_margin="2dp"
        android:backgroundTint="#F8DEFF"
        android:padding="10dp"
        android:text="@string/abs_workout"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bShouldersWorkout"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FDFF9B"
        android:text="@string/shoulders_workout"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bAbsWorkout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bArmWorkout"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_margin="2dp"
        android:backgroundTint="#FFDAC1"
        android:padding="10dp"
        android:text="@string/arms_workout"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bShouldersWorkout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bChestWorkout"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_margin="2dp"
        android:padding="10dp"
        android:backgroundTint="#CDFDBC"
        android:text="@string/chest_workout"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bArmWorkout"/>

</androidx.constraintlayout.widget.ConstraintLayout>